# gauzilla

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  downloader.js  helper.js  index.html  rust-toolchain.toml
.cargo/: config.toml
examples/: README.md
src/: gsplat.frag  gsplat.vert  lib.rs  quad.frag  quad.vert  renderer.rs  scene.rs  utils.rs
