[package]
name = "gauzilla"
version = "0.1.0"
edition = "2021"
authors = ["Yoshi Sato <https://www.satyoshi.com>"]
description = "Gauzilla: a 3D Gaussian Splatting renderer written in Rust for WebAssembly with lock-free multithreading"
repository = "https://github.com/BladeTransformerLLC/gauzilla"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = [
  "console_error_panic_hook",
  #"async_splat_stream",
]
async_splat_stream = []

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wasm_thread = { version = "0.2.0", features = ["es_modules"] }
#parking_lot = { version = "0.12", features = ["nightly"] }
bus = "2.4.1"
three-d = { version = "0.16.3", features = ["egui-gui"] }
rfd = "0.12.1"
half = "2.3.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
num-format = "0.4.4"

[dependencies.web-sys]
version = "0.3.65"
features = [
  'console',

  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'RequestCredentials',
  'Response',
  'Window',
  'ReadableStream',
  'ReadableStreamDefaultReader',

  'Worker',
  'MessageEvent',
]

[profile.release]
opt-level = 3
lto = true
debug = false
